syntax = "proto3";

package Api;
option go_package = "shut-the-box-server/api";

enum OpCode {
  UNSPECIFIED   = 0;
  MATCH_START   = 1;
  MATCH_OVER    = 2;
  ROUND_START   = 3;
  PLAYER_READY  = 4;
  PLAYER_TURN   = 5;
  PLAYER_ROLL   = 6;
  PLAYER_MOVE   = 7;
  PLAYER_CONF   = 8;
  PLAYER_FAIL   = 9;
}

enum TileState {
  OPEN          = 0;
  TOGGLE        = 1;
  SHUT          = 2;
}

enum PlayerState {
  IDLE          = 0;
  ROLL          = 1;
  PLAY          = 2;
  FAIL          = 3;
  DONE          = 4;
}

message MatchStart {
  int32 roundCount = 1;
  int32 tileCount = 2;
  int32 turnTime = 3;
  repeated Player players = 4;
}

message MatchOver {
  string winner = 1;
  repeated RoundScore rounds = 2;
}

message RoundStart {
  int32 interval = 1;
  RoundScore score = 2;
}

message RoundScore {
  repeated string players = 1;
  repeated int32 scores = 2;
}

message PlayerTurn  {
  string playerId = 1;
}

message PlayerRoll {
  string playerId = 1;
  int32 roll = 2;
}

message PlayerMove {
  string playerId = 1;
  int32 index = 2;
  TileState state = 3;
}

message PlayerConfirm {
  string playerId = 1;
  repeated TileState tiles = 2;
  bool boxShut = 3;
}

message Player {
  string playerId = 1;
  PlayerState State = 3;
  int32 roll = 2;
  repeated TileState tiles = 4;
}